# risqlet

./: .gitattributes  .gitignore  CHANGELOG.md  CLEAN-ROOM.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  jenkins  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: ai-augmented-risk-analysis-framework.md  prior-art-architecture-ip-research.md  release-checklist.md  research-appendix.md  test-heuristics-cheat-sheet-links.md  test-heuristics-cheat-sheet.md
openspec/changes/add-agent-setup/: design.md  tasks.md
openspec/changes/add-agent-setup/specs/agent-setup/: spec.md
openspec/changes/add-hook-verification/: proposal.md  tasks.md
openspec/changes/add-hook-verification/specs/hook-verification/: spec.md
openspec/changes/archive/2026-07-10-add-agent-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-catalog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-ci-reassessment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-dogfooding-experiments/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-ensemble-tooling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-mcp-adapter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-open-catalog-packs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-register-defaults-and-resume/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-trace-loop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-add-agent-setup/: proposal.md
openspec/changes/archive/2026-07-11-add-guardrail-generation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-add-hook-verification/: design.md
openspec/changes/archive/2026-07-11-add-release-prep/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-add-release-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-add-cross-platform-ci/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-fix-read-legacy-encodings/: tasks.md
openspec/changes/archive/2026-07-15-fix-text-encoding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-fix-windows-hook-install/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-add-adversarial-review/: design.md  proposal.md  tasks.md
openspec/changes/fix-read-legacy-encodings/: design.md  proposal.md  tasks.md
openspec/changes/fix-text-encoding/: proposal.md  tasks.md
openspec/specs/adversarial-review/: spec.md
openspec/specs/agent-setup/: spec.md
openspec/specs/agent-skills/: spec.md
openspec/specs/catalog-cli/: spec.md
openspec/specs/catalog-licensing/: spec.md
openspec/specs/catalog-packs/: spec.md
openspec/specs/change-reassessment/: spec.md
openspec/specs/cross-platform-support/: spec.md
openspec/specs/dogfood-harness/: spec.md
openspec/specs/ensemble-tooling/: spec.md
openspec/specs/guardrail-generation/: spec.md
openspec/specs/hook-verification/: spec.md
openspec/specs/mcp-adapter/: spec.md
openspec/specs/release-readiness/: spec.md
openspec/specs/risk-register/: spec.md
openspec/specs/risqlet-cli/: spec.md
openspec/specs/scoring-policies/: spec.md
openspec/specs/session-status/: spec.md
openspec/specs/skills-cli/: spec.md
openspec/specs/trace-results/: spec.md
scripts/: dogfood.py
scripts/prompts/: ci-diff.md  ensemble-quickstart.md  guardrails-demo.md  quickscan.md  security-catalog.md  session-resume.md  session.md  trace-demo.md
skills/risk-analysis/: SKILL.md
skills/risk-analysis/references/: continuous.md  elicitation.md  ensemble.md  guardrails.md  mitigation.md  phases.md  risk-writing.md  scoring-rubrics.md  trace.md
skills/risk-court/: SKILL.md  charges.schema.json
skills/risk-quickscan/: SKILL.md
src/risqlet/: __init__.py  changeset.py  cli.py  ensemble.py  findings.py  lifecycle.py  review.py  scoring.py  skills.py  status.py  store.py  textio.py  trace.py  validate.py
src/risqlet/catalog/: __init__.py  loader.py  models.py
src/risqlet/catalog/packs/: guidewords.yaml  heuristics.yaml  iso25010.yaml  mitre-attack.yaml  owasp-web.yaml  techniques.yaml
src/risqlet/ci/: __init__.py
src/risqlet/ci/templates/: claude-hooks.json  github.yml  gitlab.yml
src/risqlet/exports/: renderers.py
src/risqlet/guardrails/: __init__.py  engine.py  models.py  verify.py
src/risqlet/guardrails/templates/: agents-change-scope.yaml  agents-no-secret-logging.yaml  complexity-gate-ci.yaml  coverage-check-stop.yaml  env-read-deny.yaml  injection-review-agents.yaml  lint-format-posttool.yaml  precommit-secret-scan.yaml  secret-scan-posttool.yaml  test-exists-posttool.yaml
src/risqlet/mcp/: server.py  tools.py
src/risqlet/model/: __init__.py  models.py  schema_gen.py
src/risqlet/policies/: engine.py
src/risqlet/policies/packs/: li-v1.yaml  sod-ap-v1.yaml
src/risqlet/schemas/: catalog.schema.json  config.schema.json  event.schema.json  risk.schema.json
src/risqlet/setup/: __init__.py  engine.py  interactive.py  models.py  render.py
src/risqlet/setup/adapters/: claude.yaml  codex.yaml  copilot.yaml  cursor.yaml  kilo.yaml  opencode.yaml  pi.yaml
tests/: conftest.py  test_catalog.py  test_catalog_cli.py  test_changeset.py  test_cli.py  test_e2e.py  test_ensemble.py  test_exports.py  test_guardrails.py  test_hook_verification.py  test_legacy_encoding.py  test_lifecycle.py  test_mcp.py  test_models.py  test_open_packs.py  test_packaging.py  test_policies.py  test_review.py  test_setup.py  test_skills.py  test_status.py  test_store.py  test_trace.py  test_validate.py
(+42 files in other folders)
