[project]
name = "risqlet"
version = "0.1.0"
description = "Agent-facing risk analysis, mitigation and test-strategy toolkit: repo-native risk register with a deterministic CLI core"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Many Karim", email = "many.kasiriha@gmail.com" }]
keywords = [
    "risk-analysis", "risk-based-testing", "test-strategy", "fmea",
    "quality-assurance", "mcp", "agent", "coding-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/manykarim/risqlet"
Repository = "https://github.com/manykarim/risqlet"
Issues = "https://github.com/manykarim/risqlet/issues"
Changelog = "https://github.com/manykarim/risqlet/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
risqlet = "risqlet.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mcp>=1.2",
    "ruff>=0.5",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risqlet"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "risqlet/data/skills"
# risqlet/ci/templates and risqlet/guardrails/templates ship as in-package data

[tool.hatch.build.targets.sdist]
include = [
    "src/", "skills/", "tests/", "README.md", "CHANGELOG.md",
    "LICENSE", "LICENSE-CATALOG", "NOTICE", "CLEAN-ROOM.md", "pyproject.toml",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
