[project]
name = "risqlet"
version = "0.2.0"
description = "Agent-facing risk analysis, mitigation and test-strategy toolkit: repo-native risk register with a deterministic CLI core"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Many Karim", email = "many.kasiriha@gmail.com" }]
keywords = [
    "risk-analysis", "risk-based-testing", "test-strategy", "fmea",
    "quality-assurance", "mcp", "agent", "coding-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    # named explicitly rather than "OS Independent": the CLI, register, check,
    # setup and its hook run everywhere, but `risqlet guardrails` is POSIX-only.
    # Each of these is exercised by the test matrix — see .github/workflows/test.yml
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/manykarim/risqlet"
Repository = "https://github.com/manykarim/risqlet"
Issues = "https://github.com/manykarim/risqlet/issues"
Changelog = "https://github.com/manykarim/risqlet/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
risqlet = "risqlet.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mcp>=1.2",
    "ruff>=0.5",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risqlet"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "risqlet/data/skills"
# risqlet/ci/templates and risqlet/guardrails/templates ship as in-package data

[tool.hatch.build.targets.sdist]
include = [
    "src/", "skills/", "tests/", "README.md", "CHANGELOG.md",
    "LICENSE", "LICENSE-CATALOG", "NOTICE", "CLEAN-ROOM.md", "pyproject.toml",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
# An omitted `encoding=` is invisible on Linux/macOS (locale is UTF-8) and only
# corrupts data on Windows (cp1252). Turn Python's own EncodingWarning into an
# error so any executed call is caught here rather than by a Windows user. Needs
# PYTHONWARNDEFAULTENCODING=1 in the environment to be emitted at all — set in
# .github/workflows/test.yml. Complements ruff's PLW1514, which cannot infer the
# type of a path held on an attribute and so misses store.py entirely.
filterwarnings = ["error::EncodingWarning"]
markers = [
    "posix_only: requires POSIX process handling or a shell hook template; risqlet guardrails is not supported on Windows",
    "slow: builds and installs a wheel into a fresh venv",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# required by PLW1514 below, which is still a preview rule
preview = true

[tool.ruff.lint]
# ...but scope preview strictly to rules we opt into by name. Without this,
# `preview = true` also switches on every other preview rule and preview *behaviour*
# of already-selected rules, which drags in unrelated churn we never asked for.
explicit-preview-rules = true
# PLW1514 (unspecified-encoding) is in ruff *preview* and may churn. Accepted
# knowingly: it is the redundant half of the encoding guard — it catches code the
# tests never execute, while the EncodingWarning filter above catches what ruff
# cannot type-infer. If it destabilises, drop it; the runtime guard still holds.
select = ["E", "F", "I", "UP", "B", "PLW1514"]
